--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,14 @@
     <string name="action_settings">Settings</string>
     <string name="search_hint">Search User</string>
     <string name="sharp">#</string>
+
+    <string name="issue">Issue</string>
+    <string name="profile">Profile</string>
+    <string name="commit">Commits</string>
+    <string name="contributors">Contributors</string>
+
+    <string name="unfollow">Unfollow</string>
+    <string name="follow">Follow</string>
+    <string name="no_pulls">pull request가 없습니다.</string>
+    <string name="issue_closed">closed by</string>
 </resources>
